@@ -10,6 +10,8 @@
        copy. (Stefan)
 - ADD: New checkbox to select/deselect all entries
        in the commit dialog. (Stefan)
+- ADD: A doubleclick on a file/entry in the log dialog
+       starts the diff viewer. (Stefan)
 - CHG: The settings dialog got a facelift. (Stefan)
 - CHG: The layout in our installation folder
        is more organized. (Stefan)
